--- a/utahtech2/students.html
+++ b/utahtech2/students.html
@@ -4,8 +4,10 @@
 <title>Utah Tech University :: Students</title>
   <meta charset="utf-8">
   <meta name="robots" content="noindex, nofollow">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <div id="wrapper">
   <header>
     <h1>Utah Tech University</h1>
   </header>
@@ -31,5 +33,6 @@
       Copyright &copy; 2025 Utah Tech University<br>
       <a href="mailto:firstname.lastname@utahtech.edu">firstname.lastname@utahtech.edu</a>
   </footer>
+    </div>
 </body>
 </html>
